# sudp

./: .gitignore  DEVELOPMENT_CONTEXT.md  INSTALL.md  LICENSE.md  PRERELEASE.md  README.md  RELEASE.md  ROADMAP.md  USER_STORY.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_multi_instance.py
.cursor/rules/: bazaar-how-to-code.mdc  jamming.mdc  kiss.mdc  my-stack.mdc
docs/cursor_rules/: bazaar-workflow.mdc  how-to-code.mdc  my-stack.mdc  workflow.mdc
examples/: client.yaml  echo_client.py  echo_server.py  error_recovery_demo.py  error_recovery_test.py  server.yaml
scripts/: sudpc  sudpd
src/: __init__.py  __main__.py
src/client/: daemon.py  local_server.py  tcp_client.py  udp.py
src/common/: config.py  daemon.py  logging.py  packet.py
src/server/: __main__.py  daemon.py  tcp_server.py
src/sudp/client/: client.py  daemon.py  tcp_client.py
src/sudp/common/: config.py  daemon.py  logging.py  recovery.py  socket.py
src/sudp/server/: daemon.py  tcp_server.py  udp.py
src/tests/: test_packet.py  test_socket.py
src/tests/integration/: __init__.py  run_tests.py  test_multi_instance.py  test_performance.py  test_tcp_server.py
systemd/: sudpc.service  sudpd.service
